new changes for the jenkinsfile